--- a/learn-certs-pr/azure-for-sap-workloads-specialty.yml
+++ b/learn-certs-pr/azure-for-sap-workloads-specialty.yml
@@ -5,11 +5,13 @@ metadata:
   description: Архитекторы Azure для SAP Workloads обладают обширным опытом и знаниями в области процесса сертификации SAP Landscape и отраслевых стандартов, необходимых для долгосрочной работы решения SAP.
 uid: certification.azure-for-sap-workloads-specialty
 iconUrl: /media/learn/certification/badges/microsoft-certified-specialty-badge.svg
-summary: Архитекторы Azure для SAP Workloads обладают обширным опытом и знаниями в области процесса сертификации SAP Landscape и отраслевых стандартов, необходимых для долгосрочной работы решения SAP.
+summary: |-
+  Архитекторы Azure для SAP Workloads обладают обширным опытом и знаниями в области процесса сертификации SAP Landscape и отраслевых стандартов, необходимых для долгосрочной работы решения SAP.
 subTitle: Архитекторы Azure для SAP Workloads обладают обширным опытом и знаниями в области процесса сертификации SAP Landscape и отраслевых стандартов, необходимых для долгосрочной работы решения SAP.
 levels:
 - advanced
 skills:
+- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Перенос SAP Workloads в Azure
 - Разработка решения Azure для поддержки SAP Workloads
 - Построение и развертывание Azure SAP Workloads
@@ -18,26 +20,29 @@ skills:
 roles:
 - administrator
 - solution-architect
-type: role-based
+type: specialty
 products:
 - azure
 courses:
 - uid: course.az-120t00
+paths:
+- uid: learn-pr.wwl.planning-azure-sap-workloads
+- uid: learn.wwl.sap-certified-offerings-azure
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE44g2b
 exams:
 - uid: exam.az-120
 resources:
-- title: Руководство по образовательным курсам и сертификациям
+- title: Руководство по обучению и сертификации
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Повтор экзамена
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
