--- a/learn-certs-pr/exams/mb-220.yml
+++ b/learn-certs-pr/exams/mb-220.yml
@@ -1,45 +1,46 @@
 ### YamlMime:Examination
 title: Microsoft Dynamics 365 Marketing
 metadata:
-  title: 'Экзамен MB-220: Microsoft Dynamics 365 Marketing'
-  description: 'Экзамен MB-220: Microsoft Dynamics 365 Marketing'
+  title: 'Exam MB-220: Microsoft Dynamics 365 Marketing'
+  description: 'Exam MB-220: Microsoft Dynamics 365 Marketing'
 uid: exam.mb-220
 displayName: MB-220
-summary: >-
+summary: |-
+  <div style='color&#58; red; font-weight&#58; bold;'>Содержание этого экзамена будет обновлено в апреле 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, Чтобы узнать больше..<br/><br/></div>
+  
   Кандидатами на этот экзамен являются функциональные консультанты Microsoft Dynamics 365 по привлечению клиентов с опытом в маркетинге. Кандидаты отвечают за внедрение решений, которые привлекают и конвертируют лидов, повышают узнаваемость бренда, стандартизируют многоканальный обмен сообщениями и предоставляют маркетинговые идеи.
-
 
   Кандидаты несут ответственность за настройку и расширение основного маркетингового приложения, чтобы включить в него маркетинг по электронной почте, настройку, интерактивные поездки клиентов, "обработка" лидов с персонализированным опытом, интеграция с LinkedIn, Events, Voice of the Customer, целевые страницы, сегментация и оценка, а также соблюдение Генерального регламента о защите персональных данных (GDPR).
 
-
   Кандидаты должны иметь некоторое представление о принципах маркетинга и роли маркетингового приложения в отношении набора приложений Microsoft Dynamics 365, включая интеграцию с приложениями Microsoft Dynamics 365 и Office 365. Кандидаты должны понимать отраслевую терминологию, приоритеты, общие инициативы, стандарты, методологии и лучшие практики.
-subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: настройка маркетинговых приложений; управление сегментами и списками; создание и управление маркетинговыми формами и страницами; управление интересами; создание и управление маркетинговыми электронными письмами; управление поездками клиентов; управление мероприятиями и вебинарами; настройка и анализ ответов клиентов'
+subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: настройка маркетинговых приложений; управление сегментами и списками; создание и управление маркетинговыми формами и страницами; управление интересами; создание и управление маркетинговыми электронными письмами; управление поездками клиентов; управление мероприятиями и вебинарами; настройка и анализ ответов клиентов.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjQ
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-220&examname=Exam%20MB-220:%20Microsoft%20Dynamics%20365%20for%20Marketing&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-220
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-220&examname=Экзамен%20MB-220:%20Microsoft%20Dynamics%20365%20for%20Marketing&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fmb-220
 levels:
 - intermediate
 skills:
+- Содержание этого экзамена будет обновлено в апреле 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, Чтобы узнать больше.
+- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Настройка маркетинговых приложений (5-10%)
 - Управление сегментами и списками (10-15%)
-- Создание и управление маркетинговыми формами и страницам(10-15%)
-- Управление интересами (10-15%)
+- Создание и управление маркетинговыми формами и страницами (10-15%)
+- Управление лидами (10-15%)
 - Создание и управление маркетинговыми электронными письмами (10-15%)
-- Управление поездками клиентов (15-20%)
+- Управление перемещениями клиентов (15-20%)
 - Управление мероприятиями и вебинарами (10-15%)
 - Настройка и анализ ответов клиентов (10-15%)
 roles:
 - functional-consultant
-exams:
-- uid: exam.mb-200
-products:
+products: 
 - dynamics
 - dynamics-marketing
+exams:
+- uid: exam.mb-200
 courses:
-- uid: course.mb-220t01
-- uid: course.mb-220t02
+- uid: course.mb-220t00
 paths:
 - uid: learn-dynamics.set-up-dynamics-365-marketing
 - uid: learn-dynamics.work-core-features-marketing
@@ -50,23 +51,26 @@ relatedCertifications:
     uid: certification.d365-functional-consultant-marketing
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35I7b
-- title: Руководство по образовательным курсам и сертификациям
+- title: Руководство по обучению и сертификации
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Повтор экзамена
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
