--- a/learn-certs-pr/azure-developer.yml
+++ b/learn-certs-pr/azure-developer.yml
@@ -2,19 +2,19 @@
 title: 'Microsoft Certified: Azure Developer Associate'
 metadata:
   title: 'Microsoft Certified: Azure Developer Associate'
-  description: Разработчики Microsoft Azure проектируют, создают, тестируют и обслуживают облачные решения, такие как приложения и службы, сотрудничая с архитекторами облачных решений, администраторами облачных вычислений, администраторами облачных сред и клиентами для реализации этих решений.
+  description: Разработчики Microsoft Azure проектируют, создают, тестируют и обслуживают облачные решения, такие как приложения и службы, сотрудничая с архитекторами облачных решений, облако DBA, администраторами облачных сред и клиентами для реализации этих решений.
 uid: certification.azure-developer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Разработчики Microsoft Azure проектируют, создают, тестируют и обслуживают облачные решения, такие как приложения и службы, сотрудничая с архитекторами облачных решений, облако DBA, администраторами облачных сред и клиентами для реализации этих решений.
+summary: |-
+  Разработчики Microsoft Azure проектируют, создают, тестируют и обслуживают облачные решения, такие как приложения и службы, сотрудничая с архитекторами облачных решений, облако DBA, администраторами облачных сред и клиентами для реализации этих решений.
 subTitle: Разработчики Microsoft Azure проектируют, создают, тестируют и обслуживают облачные решения, такие как приложения и службы, сотрудничая с архитекторами облачных решений, облако DBA, администраторами облачных сред и клиентами для реализации этих решений.
 levels:
 - intermediate
 skills:
-- Разработка инфраструктуры Azure как сервиса вычислительных служб
-- Разработка платформы Azure как сервиса вычислительных служб
-- Разработка для службы хранилища Azure
+- Разработка вычислительных решений Azure
+- Разработка хранилища Azure
 - Внедрение безопасности Azure
-- Мониторинг, устранение неполадок и оптимизация решений
+- Мониторинг, устранение неполадок и оптимизация решений Azure.
 - Подключение и использование служб Azure и сторонних служб
 roles:
 - developer
@@ -52,22 +52,22 @@ paths:
 - uid: learn.data-ai.intro-to-ml-with-python
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJUJ
 exams:
-- uid: exam.az-203
+- uid: exam.az-204
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Azure Developer Associate.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Azure Developer Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQqM
 - title: Руководство по обучению и сертификации
-  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
+  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Повтор экзамена
-  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: deals.md
 - title: Поддержка сертификационных
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
