--- a/learn-certs-pr/exams/70-345.yml
+++ b/learn-certs-pr/exams/70-345.yml
@@ -1,19 +1,21 @@
 ### YamlMime:Examination
 title: Designing and Deploying Microsoft Exchange Server 2016
 metadata:
-  title: 'Экзамен 70-345: Designing and Deploying Microsoft Exchange Server 2016'
-  description: 'Экзамен 70-345: Designing and Deploying Microsoft Exchange Server 2016'
+  title: 'Exam 70-345: Designing and Deploying Microsoft Exchange Server 2016'
+  description: 'Exam 70-345: Designing and Deploying Microsoft Exchange Server 2016'
 uid: exam.70-345
 displayName: 70-345
-summary: >-
-  Кандидатами на этот экзамен являются ИТ-консультанты или старшие администраторы, которые выступают в качестве технического руководителя команды администраторов. Кандидатам должны быть хорошо известны требования для интеграции Microsoft Exchange Server со Skype для бизнеса и Office 365.
-
+summary: |-
+  <div style='color&#58; red;'>ЭКЗАМЕН БЫЛ ОТМЕНЕН 30 Июнь 2020 года. Экзамен для замены может быть доступен. Чтобы узнать больше, посетите наш блог&#58; <a href="https://www.microsoft.com/en-us/learning/community.aspx">https://www.microsoft.com/en-us/learning/community.aspx</a> и просмотрите наши объявления об экзаменах. Примечание&#58; Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/><br/></div>
+  
+  Кандидаты на прохождения этого экзамена — IT-консультанты или старшие администраторы, которые могут выполнять роль технического руководителя отдела администраторов. Кандидатам должны быть хорошо известны требования для интеграции Microsoft Exchange Server со Skype для бизнеса и Office 365.
 
   У кандидатов должен быть опыт проектирования серверов Exchange и управления ими, поддержки среды обмена сообщениями Exchange 2016 в корпоративной среде не менее трех лет.
-subTitle: Кандидатами на этот экзамен являются ИТ-консультанты или старшие администраторы, которые выступают в качестве технического руководителя команды администраторов. Кандидатам должны быть хорошо известны требования для интеграции Microsoft Exchange Server со Skype для бизнеса и Office 365.
+subTitle: Кандидаты на прохождения этого экзамена — IT-консультанты или старшие администраторы, которые могут выполнять роль технического руководителя отдела администраторов. Кандидатам должны быть хорошо известны требования для интеграции Microsoft Exchange Server со Skype для бизнеса и Office 365.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Y8do
 practiceTestUrl: https://www.mindhub.com/70-345-designing-and-deploying-microsoft-exchange/p/MU-70-345?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=345&examname=Designing%20and%20Deploying%20Microsoft%20Exchange%20Server%202016&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F70-345
 locales:
 - en
 - es
@@ -23,10 +25,10 @@ locales:
 - de
 - ja
 - pt-br
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=345&examname=Designing%20and%20Deploying%20Microsoft%20Exchange%20Server%202016&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2F70-345
-levels:
+levels: 
 - advanced
 skills:
+- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Планирование, развертывание, управление и устранение неполадок в базах данных почтовых ящиков (15-20%)
 - Планирование, развертывание, управление, поиск и устранение неполадок в службах клиентского доступа (15-20%)
 - Планирование, развертывание, управление и устранение неполадок в службах транспорта (15-20%)
@@ -44,7 +46,7 @@ relatedCertifications:
 - related:
     uid: certification.mcse-productivity-certification
 resources:
-- title: Повтор экзамена
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Панель управления сертификацией
@@ -52,7 +54,7 @@ resources:
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
