--- a/learn-certs-pr/exams/az-101.yml
+++ b/learn-certs-pr/exams/az-101.yml
@@ -1,33 +1,36 @@
 ### YamlMime:Examination
 title: Microsoft Azure Integration and Security
 metadata:
-  title: 'Экзамен AZ-101: Microsoft Azure Integration and Security'
-  description: 'Экзамен AZ-101: Microsoft Azure Integration and Security'
+  title: 'Exam AZ-101: Microsoft Azure Integration and Security'
+  description: 'Exam AZ-101: Microsoft Azure Integration and Security'
 uid: exam.az-101
 displayName: AZ-101
-summary: Кандидатами на этот экзамен являются Azure Administrators, которые управляют облачными службами, которые охватывают возможности хранения, безопасности, сетей и вычислений в облаке. Кандидаты имеют глубокое понимание каждой службы в течение всего жизненного цикла IT и принимают запросы на инфраструктурные услуги, приложения и среды. Они дают рекомендации по использованию услуг для обеспечения оптимальной производительности и масштаба, а также обеспечения, размера, контроля и корректировки ресурсов по мере необходимости. Кандидаты на этот экзамен должны обладать навыками использования PowerShell, интерфейса командной строки, портала Azure, шаблонов ARM, операционных систем, виртуализации, облачной инфраструктуры, структур хранения и сетей.
+summary: |-
+  <div style='color&#58; red; font-weight&#58; bold;'>ЭТОТ ЭКЗАМЕН БЫЛ ОТМЕНЕН 1 май 2019 года. Примечание: Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/></div>
+  
+  Кандидатами на этот экзамен являются Azure Administrators, которые управляют облачными службами, которые охватывают возможности хранения, безопасности, сетей и вычислений в облаке. Кандидаты имеют глубокое понимание каждой службы в течение всего жизненного цикла IT и принимают запросы на инфраструктурные услуги, приложения и среды. Они дают рекомендации по использованию услуг для обеспечения оптимальной производительности и масштаба, а также обеспечения, размера, контроля и корректировки ресурсов по мере необходимости. Кандидаты на этот экзамен должны обладать навыками использования PowerShell, интерфейса командной строки, портала Azure, шаблонов ARM, операционных систем, виртуализации, облачной инфраструктуры, структур хранения и сетей.
 subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: защита идентификационных данных, оценка и выполнение миграции сервера в Azure, внедрение и управление приложениями, а также внедрение передовых виртуальных сетей.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC6M
-practiceTestUrl: https://www.mindhub.com/product-p/mu-az-101_p.htm?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+practiceTestUrl: https://www.mindhub.com/shop/microsoft?facetValueFilter=tenant~publisher:measureup&?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/
-retirementDate: 05/01/2019
 levels:
 - intermediate
 skills:
-- Оценка и выполнение миграции сервера в Azure (15-20%)
-- Внедрение и управление приложениями (20-25%)
-- Внедрение передовых виртуальных сетей (30-35%)
-- Безопасная идентификация (25-30%)
+- Оценивать и выполнять миграцию сервера в Azure (15-20%)
+- Внедрять и управлять службами приложений (20-25%)
+- Внедрять расширенную виртуальную сеть (30-35%)
+- Управление идентификационными (25-30%)
+retirementDate: 05/01/2019
 roles:
 - administrator
+products:
+- azure
 exams:
 - uid: exam.az-100
 - uid: exam.az-102
-products:
-- azure
 paths:
 - uid: learn.cloud-foundations
 relatedCertifications:
@@ -35,20 +38,23 @@ relatedCertifications:
     uid: certification.azure-administrator
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Azure Administrator Associate.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Azure Administrator Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtY7Z
 - title: Руководство по обучению и сертификации
-  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
+  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
