--- a/learn-certs-pr/exams/az-120.yml
+++ b/learn-certs-pr/exams/az-120.yml
@@ -1,30 +1,29 @@
 ### YamlMime:Examination
-title: Planning and Administering Microsoft Azure for SAP Workloads (beta)
+title: Planning and Administering Microsoft Azure for SAP Workloads
 metadata:
-  title: 'Экзамен AZ-120: Planning and Administering Microsoft Azure for SAP Workloads (beta)'
-  description: 'Экзамен AZ-120: Planning and Administering Microsoft Azure for SAP Workloads (beta)'
+  title: 'Exam AZ-120: Planning and Administering Microsoft Azure for SAP Workloads'
+  description: 'Exam AZ-120: Planning and Administering Microsoft Azure for SAP Workloads'
 uid: exam.az-120
 displayName: AZ-120
-summary: >-
-  Кандидатами на этот экзамен являются архитекторы и инженеры, хорошо знакомые с процессом сертификации SAP ландшафтов и отраслевыми стандартами, которые характерны для долгосрочной работы с решениями SAP. Кандидаты дают рекомендации по услугам и корректируют ресурсы в зависимости от ситуации для оптимальной отказоустойчивости, производительности, масштаба, условий, размера и мониторинга.
+summary: |-
+  Кандидатами на этот экзамен являются архитекторы и инженеры, хорошо знакомые с процессом сертификации SAP ландшафтов и отраслевыми стандартами, которые характерны для долгосрочной работы с решениями SAP. Кандидаты дают рекомендации по службам и корректируют ресурсы соответствующим образом для обеспечения оптимальной отказоустойчивости, производительности, масштаба, предоставления, размера и мониторинга.
 
-
-  Архитекторы Azure для SAP Workloads должны обладать обширным опытом и знаниями о приложениях SAP, SAP HANA, S/4HANA, SAP NetWeaver, SAP BW, серверах OS для приложений и баз данных SAP, порталах Azure, шаблонах ARM, операционных системах, виртуализации, облачной инфраструктуре, структуре хранилищ, дизайне систем обеспечения высокой доступности, проектах аварийного восстановления, концепциях защиты данных и о моделях сетевых взаимодействий.
-
+  Архитекторы Azure для рабочих нагрузок SAP должны обладать обширным опытом и знаниями в области приложений SAP, SAP HANA, S/4HANA, SAP NetWeaver, SAP BW, серверов OS для приложений и баз данных SAP, портала Azure, шаблонов ARM, операционных систем, виртуализации, облачной инфраструктуры, структуры хранения данных, проектировании высокой доступности, проектировании восстановления в аварийных ситуациях, концепций защиты данных и организации сети.
 
   Настоятельно рекомендуется, чтобы кандидаты на этот экзамен имели сертификат администратора Azure или Azure Architect в дополнение к сертификатам SAP HANA и Linux.
 subTitle: 'Этот экзамен помогает оценить вашу способность выполнять следующие технические задачи: Перенос SAP Workloads в Azure; разработка решения Azure для поддержки SAP Workloads; построение и развертывание Azure SAP Workloads; проверка инфраструктуры Azure для SAP Workloads; и ввод в эксплуатацию архитектуры Azure SAP.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43XOu
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-120&examname=Exam%20AZ-120:%20Planning%20and%20Administering%20Microsoft%20Azure%20for%20SAP%20Workloads&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-120
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-120&examname=Экзамен%20AZ-120:%20Planning%20and%20Administering%20Microsoft%20Azure%20for%20SAP%20Workloads&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Faz-120
 levels:
 - advanced
 skills:
+- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Перенос SAP Workloads в Azure (10-15%)
 - Разработка решения Azure для поддержки SAP Workloads (20-25%)
-- Построение и развертывание Azure SAP Workloads (35-40%)
+- Построение и развертывание для SAP Workloads (35-40%)
 - Проверка инфраструктуры Azure для SAP Workloads (10-15%)
 - Ввод в эксплуатацию архитектуры Azure SAP (10-15%)
 roles:
@@ -34,6 +33,9 @@ products:
 - azure
 courses:
 - uid: course.az-120t00
+paths:
+- uid: learn-pr.wwl.planning-azure-sap-workloads
+- uid: learn.wwl.sap-certified-offerings-azure
 relatedCertifications:
 - related:
     uid: certification.azure-for-sap-workloads-specialty
@@ -41,18 +43,21 @@ resources:
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Повтор экзамена
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
