--- a/learn-certs-pr/exams/az-203.yml
+++ b/learn-certs-pr/exams/az-203.yml
@@ -1,43 +1,45 @@
 ### YamlMime:Examination
 title: Developing Solutions for Microsoft Azure
 metadata:
-  title: 'Экзамен AZ-203: Developing Solutions for Microsoft Azure'
-  description: 'Экзамен AZ-203: Developing Solutions for Microsoft Azure'
+  title: 'Exam AZ-203: Developing Solutions for Microsoft Azure'
+  description: 'Exam AZ-203: Developing Solutions for Microsoft Azure'
 uid: exam.az-203
 displayName: AZ-203
-summary: >-
-  Кандидатами на этот экзамен являются разработчики Azure, которые разрабатывают и внедряют облачные решения, такие как приложения и сервисы. Они участвуют на всех этапах разработки, от проектирования решений до разработки и развертывания, до тестирования и обслуживания. Они взаимодействуют с архитекторами облачных решений, облачными администраторами баз данных, облачными администраторами и клиентами для реализации решения.
-
+summary: |-
+  <div style='color&#58; red; font-weight&#58; bold;'>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, <a href="/learn/certifications/exams/az-204">AZ-204</a>, СТАЛА ДОСТУПНОЙ С 24 ФЕВРАЛЯ. Вы сможете сдать этот экзамен до 31 мая 2020 года. Примечание&#58; Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/><br/></div>
+  
+  Кандидатами на этот экзамен являются разработчики Azure, которые разрабатывают и внедряют облачные решения, такие как приложения и сервисы. Они участвуют на всех этапах разработки, от проектирования решений до разработки и развертывания, до тестирования и обслуживания. Они взаимодействуют с архитекторами облачных решений, администраторами облачных баз данных, администраторами облаков и клиентами для реализации решения.
   <br/>
-
 
   Кандидаты должны обладать навыками разработки приложений и сервисов с использованием инструментов и технологий Azure, включая хранение, безопасность, вычисление и связь.
 
-
   Кандидаты должны иметь по крайней мере один год опыта разработки масштабируемых решений на всех этапах разработки программного обеспечения и быть опытными по крайней мере в одном поддерживаемом облаком языке программирования.
+
+  <div style='color&#58; red; font-weight&#58; bold;'><br/>ПРИМЕЧАНИЕ: После прохождении этого экзамена вы получите следующий сертификат&#58; <a href="https://docs.microsoft.com/learn/certifications/azure-developer">Microsoft Certified&#58; Azure Developer Associate</a>.</div>
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: разрабатывать вычислительные решения Azure; разрабатывать вычислительные решения Azure Platform; развивать хранилище Azure; внедрять безопасность Azure; отслеживать, устранять неисправности и оптимизировать решения; подключаться и использовать службы Azure , а также и сторонние службы.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHC
-practiceTestUrl: https://us.mindhub.com/p/MU-AZ-203?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 locales:
 - en
 - ja
 - zh-cn
 - ko
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-203&examname=Экзамен%20AZ-203:%20Developing%20Solutions%20for%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Faz-203
+providers:
+  - providerType: pearson-vue
+    examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-203&examname=Exam%20AZ-203:%20Developing%20Solutions%20for%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-203
 levels:
 - intermediate
 skills:
-- Разрабатывать инфраструктуру Azure как службу вычислительных решений (10-15%)
+- НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, AZ-204, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 24 Февраль 2020 ГОДА. Вы сможете сдать этот экзамен до 31 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.
+- Разработка инфраструктуры Azure как сервиса вычислительных служб (10-15%)
 - Разрабатывать Azure Platform как службу вычислительных решений (20-25%)
 - Разработка хранилища Azure (15-20%)
 - Внедрение безопасности Azure (10-15%)
 - Мониторинг, устранение неполадок и оптимизация решений (10-15%)
-- Подключение и использование служб Azure и сторонних служб (20-25%)
+- Подключение и использование Azure и сторонних служб (20-25%)
+retirementDate: 05/31/2020
 roles:
 - developer
-exams:
-- uid: exam.az-202
 products:
 - azure
 - azure-virtual-machines
@@ -66,31 +68,31 @@ paths:
 - uid: learn.deploy-a-website-with-azure-app-service
 - uid: learn.data-science
 - uid: learn.secure-your-cloud-data
-- uid: learn.modern-data-warehouse
-- uid: learn.work-with-nosql-data-in-azure-cosmos-db
-- uid: learn.data-ai.intro-to-ml-with-python
 relatedCertifications:
 - related:
-    uid: certification.azure-developer
+    uid: none
 resources:
 - title: Обучение для получения сертификата
   description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Azure Developer Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQqM
 - title: Руководство по обучению и сертификации
-  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
+  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Повтор экзамена
-  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
