--- a/learn-certs-pr/exams/mb-230.yml
+++ b/learn-certs-pr/exams/mb-230.yml
@@ -1,43 +1,43 @@
 ### YamlMime:Examination
 title: Microsoft Dynamics 365 Customer Service
 metadata:
-  title: 'Экзамен MB-230: Microsoft Dynamics 365 Customer Service'
-  description: 'Экзамен MB-230: Microsoft Dynamics 365 Customer Service'
+  title: 'Exam MB-230: Microsoft Dynamics 365 Customer Service'
+  description: 'Exam MB-230: Microsoft Dynamics 365 Customer Service'
 uid: exam.mb-230
 displayName: MB-230
-summary: >-
+summary: |-
+  <div style='color&#58; red; font-weight&#58; bold;'>Содержание этого экзамена будет обновлено в апреле 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  
   Кандидатами на этот экзамен являются функциональные консультанты Dynamics 365 с опытом работы с клиентами. Кандидаты несут ответственность за внедрение многоканальных решений, ориентированных на обслуживание, качество, надежность, эффективность и удовлетворенность клиентов.
-
   <br/>
 
-
   Кандидаты проектируют и внедряют визуализации управления службами и отчетами, предоставляемые и выполненные в сотрудничестве с Solution Architect. Кандидаты сотрудничают с администратором Dynamics 365 для внедрения и обновления компонентов платформы Power, включая базу знаний и Forms Pro.
-
-
+  
   Кандидаты должны обладать сильными прикладными знаниями, удовлетворяющими потребностям пользователей через службу поддержки клиентов Dynamics 365, включая глубокое понимание дел, базы знаний, очередей, прав, соглашений об уровне обслуживания (SLA), визуализаций и Unified Service Desk (унифицированной панели управления).
-
-
+  
   Кандидаты должны понимать отраслевую терминологию, приоритеты, стандарты, методологии, операции обслуживания клиентов и лучшие практики. Кандидаты должны иметь полное понимание роли приложения обслуживания клиентов по отношению к набору приложений Dynamics 365, а также базовое понимание архитектуры решения и обеспечение качества.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: выполнение настройки; управление делами и база знаний; управление очередями, правами и SLA; и настройка голоса клиента.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJVu
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-230&examname=Exam%20MB-230:%20Microsoft%20Dynamics%20365%20for%20Customer%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-230
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-230&examname=Экзамен%20MB-230:%20Microsoft%20Dynamics%20365%20for%20Customer%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fmb-230
 levels:
 - intermediate
 skills:
+- Содержание этого экзамена будет обновлено в апреле 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, Чтобы узнать больше.
+- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Выполнение настройки (25-30%)
-- Управление делами и база знаний (30-35%)
+- Управление случаями и базой знаний (30-35%)
 - Управление очередями, правами и SLA (25-30%)
 - Настройка голоса клиента (15-20%)
 roles:
 - functional-consultant
-exams:
-- uid: exam.mb-200
-products:
+products: 
 - dynamics
 - dynamics-customer-service
+exams:
+- uid: exam.mb-200
 courses:
 - uid: course.mb-230t01
 paths:
@@ -50,23 +50,26 @@ relatedCertifications:
     uid: certification.d365-functional-consultant-customer-service
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Dynamics 365 Customer Service Functional Consultant Associate.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Dynamics 365 Customer Service Functional Consultant Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35KL2
-- title: Руководство по образовательным курсам и сертификациям
+- title: Руководство по обучению и сертификации
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Повтор экзамена
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
