--- a/learn-certs-pr/exams/mb-600.yml
+++ b/learn-certs-pr/exams/mb-600.yml
@@ -1,21 +1,29 @@
 ### YamlMime:Examination
-title: Microsoft Power Apps + Dynamics 365 Solution Architect (beta)
+title: 'Microsoft Power Apps + Dynamics 365 Solution Architect (beta)'
 metadata:
-  title: 'Экзамен MB-600: Microsoft Power Apps + Dynamics 365 Solution Architect (beta)'
-  description: 'Экзамен MB-600: Microsoft Power Apps + Dynamics 365 Solution Architect (beta)'
+  title: 'Exam MB-600: Microsoft Power Apps + Dynamics 365 Solution Architect (beta)'
+  description: 'Exam MB-600: Microsoft Power Apps + Dynamics 365 Solution Architect (beta)'
 uid: exam.mb-600
 displayName: MB-600
-summary: "Архитекторы решений для приложений, основанных на моделях Microsoft Power Apps в Dynamics 365, ведут успешные реализации и фокусируются на том, как решения удовлетворяют более широкие деловые и технические потребности организаций.\n\nАрхитектор решений обладает функциональными и техническими знаниями о приложениях на основе моделей Power Platform в Dynamics 365, таких как служба поддержки клиентов Dynamics 365, сервисная служба Dynamics 365, Marketing Dynamics 365 и Sales Dynamics 365, соответствующие облачные решения Microsoft и других сторонних технологий. Архитектор решений применяет знания и опыт на протяжении всего проекта. Архитектор решений выполняет упреждающую и профилактическую работу, чтобы повысить ценность инвестиций клиента и улучшить работу организации. Эта роль требует умения определять возможности для решения бизнес-задач.\n\nАрхитекторы решений имеют опыт работы в функциональных и технических дисциплинах Power Platform и приложений в Dynamics 365, управляемых моделями. Архитекторы решений должны быть в состоянии содействовать проектным решениям на протяжении всего процесса разработки, конфигурации, интеграции, инфраструктуры, безопасности, доступности, хранения и управления изменениями. Эта роль уравновешивает бизнес-потребности проекта, отвечая функциональным и нефункциональным требованиям.\n\n<div style=\"color:red\"><br/><strong>NOTE&#58; Этот экзамен будет недоступен до 27 января 2020 года</strong></div>  "
+summary: |-
+  Архитекторы решений для приложений, основанных на моделях Microsoft Power Apps в Dynamics 365, ведут успешные реализации и фокусируются на том, чтобы решения удовлетворяли более широкие деловые и технические потребности организаций.
+
+  Архитектор решений обладает функциональными и техническими знаниями о приложениях на основе моделей Power Platform в Dynamics 365, таких как служба поддержки клиентов Dynamics 365, сервисная служба Dynamics 365, Marketing Dynamics 365 и Sales Dynamics 365, соответствующие облачные решения Microsoft и других сторонних технологий. Архитектор решений применяет знания и опыт на протяжении всего проекта. Архитектор решений выполняет упреждающую и профилактическую работу, чтобы повысить ценность инвестиций клиента и улучшить работу организации. Эта роль требует умения определять возможности для решения бизнес-задач.
+
+  Архитекторы решений имеют опыт работы в функциональных и технических дисциплинах Power Platform и приложений в Dynamics 365, управляемых моделями. Архитекторы решений должны быть в состоянии содействовать проектным решениям на протяжении всего процесса разработки, конфигурации, интеграции, инфраструктуры, безопасности, доступности, хранения и управления изменениями. Эта роль уравновешивает бизнес-потребности проекта, отвечая функциональным и нефункциональным требованиям.
+  
+  <div style='color&#58; red;'><br/>Баллы за бета-версии экзаменов не выставляются сразу, поскольку мы собираем информацию о качестве вопросов и экзамена. Узнайте больше о <a href="/learn/certifications/certification-exams#participating-in-beta-exams">ценности и важности бета-версий экзаменов</a>.</div>
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: планирование решений и анализ требований; разработка решений; и внедрение решений.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE440oW
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-600&examname=Exam%20MB-600:%20Microsoft%20Power%20Apps%20+%20Dynamics%20365%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-600
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-600&examname=Экзамен%20MB-600:%20Microsoft%20Power%20Apps%20+%20Dynamics%20365%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fmb-600
 levels:
 - advanced
 skills:
-- Планирование решений и анализ требований (30-35%)
+- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
+- Выполнение анализа решений и анализа требований (30-35%)
 - Разработка решений (45-50%)
 - Внедрение решений (20-25%)
 roles:
@@ -23,25 +31,30 @@ roles:
 products:
 - dynamics
 - power-apps
+paths:
+- uid: learn-dynamics.become-solution-architect
 relatedCertifications:
 - related:
     uid: certification.power-apps-and-d365-solution-architect-expert
 resources:
 - title: Руководство по обучению и сертификации
-  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
+  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Повтор экзамена
-  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay
+  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
