--- a/learn-certs-pr/exams/mb-700.yml
+++ b/learn-certs-pr/exams/mb-700.yml
@@ -1,56 +1,58 @@
 ### YamlMime:Examination
 title: 'Microsoft Dynamics 365: Finance and Operations Apps Solution Architect (beta)'
 metadata:
-  title: 'Экзамен MB-700: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect (beta)'
-  description: 'Экзамен MB-700: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect (beta)'
+  title: 'Exam MB-700: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect (beta)'
+  description: 'Exam MB-700: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect (beta)'
 uid: exam.mb-700
 displayName: MB-700
-summary: >-
-  Архитекторы решений для приложений  Finance и Operations в Microsoft Dynamics 365 являются доверенными консультантами, которые консультируются с организациями и членами группы по внедрению, чтобы преобразовать бизнес-потребности в четко определенное и экономически эффективное решение.
-
+summary: |-
+  Архитекторы решений для приложений для финансов и операций в Microsoft Dynamics 365 являются доверенными консультантами, которые консультируются с организациями и членами группы по внедрению для того, чтобы преобразовать бизнес-потребности в четко определенное и экономически эффективное решение.
 
   Архитектор решений несет ответственность за целостность и успешную реализацию разработки решения. Архитектор предоставляет важные рекомендации во время предпродажной подготовки и проектирования, а также консультирует на протяжении оставшейся части жизненного цикла проекта относительно решения проблем, возникающих в ходе реализации.
 
-
-  Архитектор решений должен обладать обширными знаниями и опытом, охватывающими потребности бизнеса и возможности продукта. Архитектор решений должен обладать широкими функциональными и техническими знаниями в качестве разработчика или функционального консультанта в одной из следующих областей&#58; Finance, Manufacturing, или Supply Chain Management. Кроме того, они обладают обширными знаниями предметной области в одной или нескольких отраслях клиентов.
-
-
-  <div style="color:red"><br/><strong>NOTE&#58; Этот экзамен будет недоступен до 27 января 2020 года</strong></div>
+  Архитектор решений должен обладать обширными знаниями и опытом, охватывающими потребности бизнеса и возможности продукта. Архитектор решений должен обладать широкими функциональными и техническими знаниями в качестве разработчика или функционального консультанта в одной из следующих областей: Finance, Manufacturing, или Supply Chain Management. Кроме того, они обладают обширными знаниями предметной области в одной или нескольких отраслях клиентов.
+  
+  <div style='color&#58; red;'><br/>Баллы за бета-версии экзаменов не выставляются сразу, поскольку мы собираем информацию о качестве вопросов и экзамена. Узнайте больше о <a href="/learn/certifications/certification-exams#participating-in-beta-exams">ценности и важности бета-версий экзаменов</a>.</div>
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: определение требований решения; разработка компонентов решения; и определение стратегии тестирования решений и управления.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Vdh
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-700&examname=Exam%20MB-700:%20Microsoft%20Dynamics%20365%3A%20Finance%20and%20Operations%20Apps%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-700
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-700&examname=Экзамен%20MB-700:%20Microsoft%20Dynamics%20365%3A%20Finance%20and%20Operations%20Apps%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fmb-700
 levels:
 - advanced
 skills:
-- Определение требований решения (30-35 %)
-- Разработка компонентов решения (40-45 %)
-- Определение стратегии тестирования решений и управления. (25-30 %)
+- Выявление требований решения (30-35%)
+- Разработка компонентов решения (40-45%)
+- Определение стратегии тестирования решений и управления (25-30%)
 roles:
 - solution-architect
 products:
 - dynamics
+paths:
+- uid: learn-dynamics.become-solution-architect
 relatedCertifications:
 - related:
     uid: certification.d365-finance-and-operations-apps-solution-architect-expert
 resources:
 - title: Руководство по обучению и сертификации
-  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
+  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Повтор экзамена
-  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay
+  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
