--- a/learn-certs-pr/exams/mb-900.yml
+++ b/learn-certs-pr/exams/mb-900.yml
@@ -1,32 +1,33 @@
 ### YamlMime:Examination
 title: Microsoft Dynamics 365 Fundamentals
 metadata:
-  title: 'Экзамен MB-900: Microsoft Dynamics 365 Fundamentals'
-  description: 'Экзамен MB-900: Microsoft Dynamics 365 Fundamentals'
+  title: 'Exam MB-900: Microsoft Dynamics 365 Fundamentals'
+  description: 'Exam MB-900: Microsoft Dynamics 365 Fundamentals'
 uid: exam.mb-900
 displayName: MB-900
-summary: >-
+summary: |-
+  <div style='color&#58; red; font-weight&#58; bold;'>ЭТОТ ЭКЗАМЕН БЫЛ ОТМЕНЕН 31 декабрь 2019 года. Примечание: Экзамен будет отменен в 23:59 по центральному стандартному времени</div>
+  <br/>
   Этот экзамен предназначен для кандидатов, желающих продемонстрировать базовые знания Microsoft Dynamics 365, приложений Power Platform и моделей облачных вычислений. В этом экзамене будут рассмотрены соображения и преимущества использования Dynamics 365, Power Platform и облачных служб в целом. Этот экзамен можно сдать в качестве предшествующего уровня сертификации по Dynamics 365.
-
 
   Кандидаты на сдачу этого экзамена должны иметь общие знания или соответствующий опыт работы в среде информационных технологий (IT). Кандидаты также должны иметь базовые знания бизнес-сценариев и опыт работы с бизнес-требованиями, законодательными требованиями и требованиями к безопасности для IT-проектов.
 subTitle: Этот экзамен оценивает ваши знания в Microsoft Dynamics 365, Power Platform, облачных концепциях, параметрах лицензирования, а также параметрах развертывания и релиза.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVu
-practiceTestUrl: https://us.mindhub.com/p/MU-MB-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/
 locales:
 - en
 - ja
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-900&examname=Экзамен%20MB-900:%20Основы%20Microsoft%20Dynamics%20365&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fmb-900
 levels:
 - beginner
 skills:
 - Понимание Dynamics 365 (40-45%)
 - Понимание облачных концепций (25-30%)
 - Понимание развертываний и релизов (20-25%)
+retirementDate: 12/31/2019
 roles:
 - developer
-products:
+products: 
 - dynamics
 courses:
 - uid: course.mb-900t01
@@ -37,20 +38,23 @@ relatedCertifications:
     uid: certification.d365-fundamentals
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Dynamics 365 Fundamentals.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Dynamics 365 Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35v9m
-- title: Руководство по образовательным курсам и сертификациям
+- title: Руководство по обучению и сертификации
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
