--- a/learn-certs-pr/exams/md-100.yml
+++ b/learn-certs-pr/exams/md-100.yml
@@ -1,39 +1,38 @@
 ### YamlMime:Examination
-title: Exam Windows 10
+title: Windows 10
 metadata:
-  title: 'Экзамен MD-100: Windows 10'
-  description: 'Экзамен MD-100: Windows 10'
+  title: 'Exam MD-100: Windows 10'
+  description: 'Exam MD-100: Windows 10'
 uid: exam.md-100
 displayName: MD-100
-summary: >-
-  Если вы успешно сдадите [Экзамен 70-698](https://www.microsoft.com/learning/exam-70-698.aspx) до его истечения 31 марта 2019 года, вам нужно всего лишь сдать MD-101, чтобы получить сертификат по современным ПК. Кандидатами на этот экзамен являются администраторы, которые развертывают, настраивают, защищают, управляют и отслеживают устройства и клиентские приложения в корпоративной среде. Кандидаты управляют идентификацией, доступом, политиками, обновлениями и приложениями.
-
+summary: |-
+  Если вы успешно сдадите [Exam 70-698](https://www.microsoft.com/learning/exam-70-698.aspx) до его истечения 31 марта 2019 года, вам нужно всего лишь сдать MD-101, чтобы получить сертификат по современным ПК. Кандидатами на этот экзамен являются администраторы, которые развертывают, настраивают, защищают, управляют и отслеживают устройства и клиентские приложения в корпоративной среде. Кандидаты управляют идентификацией, доступом, политиками, обновлениями и приложениями.
 
   Будучи администраторами, кандидаты регулярно сотрудничают с администратором Microsoft 365 Enterprise в проектировании и реализации стратегии для устройств, которые соответствуют бизнес-целям современной организации.
 
-
   Кандидаты должны быть знакомы с рабочими пространствами Microsoft 365, должны обладать навыками и опытом в развертывании, настройке и поддержке устройств и технологий под Windows 10 и другими ОС.
-subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: развертывание Windows; управление устройствами и данными; настройка соединения; и техническая поддержка Windows. Если вы успешно сдадите Экзамен 70-698 до его истечения 31 марта 2019 года, вам нужно всего лишь сдать MD-101, чтобы получить сертификат по современным ПК.'
+subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: развертывание Windows; управление устройствами и данными; настройка соединения; и техническая поддержка Windows. Если вы успешно сдадите Exam 70-698 до его истечения 31 марта 2019 года, вам нужно всего лишь сдать MD-101, чтобы получить сертификат по современным ПК.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJVC
 practiceTestUrl: https://www.mindhub.com/md-100-windows-10-microsoft-official-practice-test/p/MU-MD-100?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MD-100&examname=Exam%20MD-100:%20Windows%2010&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmd-100
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MD-100&examname=Экзамен%20MD-100:%20Windows%2010&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fmd-100
 levels:
 - intermediate
 skills:
+- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Развертывание Windows (15-20%)
 - Управление устройствами и данными (35-40%)
 - Настройка соединения (15-20%)
 - Техническая поддержка Windows (25-30%)
 roles:
 - administrator
-exams:
-- uid: exam.md-101
 products:
 - m365
 - windows
+exams:
+- uid: exam.md-101
 courses:
 - uid: course.md-100t01
 - uid: course.md-100t02
@@ -44,23 +43,26 @@ relatedCertifications:
     uid: certification.modern-desktop
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Modern Desktop Administrator Associate.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Modern Desktop Administrator Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE45lE2
-- title: Руководство по образовательным курсам и сертификациям
+- title: Руководство по обучению и сертификации
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Повтор экзамена
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
