--- a/learn-certs-pr/m365-enterprise-administrator.yml
+++ b/learn-certs-pr/m365-enterprise-administrator.yml
@@ -2,28 +2,30 @@
 title: 'Microsoft 365 Certified: Enterprise Administrator Expert'
 metadata:
   title: 'Microsoft 365 Certified: Enterprise Administrator Expert'
-  description: Администраторы предприятий Microsoft 365 Enterprise оценивают, планируют, переносят, развертывают и управляют службами Microsoft 365.
+  description: Microsoft 365 Enterprise Administrator участвует в оценке, планировании, миграции, развертывании и управлении службами Microsoft 365.
 uid: certification.m365-enterprise-administrator
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
-summary: Администраторы предприятий Microsoft 365 Enterprise оценивают, планируют, переносят, развертывают и управляют службами Microsoft 365.
+summary: |-
+  Администраторы предприятий Microsoft 365 Enterprise оценивают, планируют, переносят, развертывают и управляют службами Microsoft 365.
+  
+  <div style='color&#58; red;'><br/>Сертификация для MCSE Productivity solutions Expert будет отменена 30 июня 2020 года. Следовательно, сертификация для MCSE Productivity solutions Expert не будет рассматриваться в качестве обязательного условия для сертификации Microsoft 365 Certified&#58; Enterprise Administrator Expert, после 30 июня 2021 года. (1 год после отмены сертификации MCSE).</div>
 subTitle: Администраторы предприятий Microsoft 365 Enterprise оценивают, планируют, переносят, развертывают и управляют службами Microsoft 365.
 levels:
 - advanced
 skills:
-- Проектирование и внедрение служб Microsoft 365
-- Управление идентификацией и ролями пользователей
+- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
+- Разработка и внедрение сервисов Microsoft 365
+- Управление удостоверениями и ролями пользователя
 - Управление доступом и аутентификацией
-- Планирование рабочих пространств и приложений Office 365
-- Внедрение служб мобильных устройств
-- Внедрение Microsoft 365 Security and Threat Management
-- Управление руководством и соответствием в Microsoft 365
+- Планирование рабочих нагрузок и приложений Office 365
+- Внедрение современных сервисов устройств
+- Внедрение Microsoft 365 для обеспечения безопасности и управления угрозами
+- Управление Microsoft 365 для управления и соответствия
 roles:
 - administrator
 type: role-based
 products:
 - m365
-- azure-active-directory
-- office-365
 courses:
 - uid: course.ms-100t01
 - uid: course.ms-100t02
@@ -50,16 +52,16 @@ exams:
 - uid: exam.ms-101
 resources:
 - title: Руководство по обучению и сертификации
-  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
+  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Повтор экзамена
-  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: deals.md
 - title: Поддержка сертификационных
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
